--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
 
 /* Reset */
 *{
     margin: 0px;
     padding: 0px;
+    font-family: "Sedan SC", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
+
 
 #jogo{
     display: block;
 }
 
+label{
+    color: #1b385e;
+    text-shadow:#8f17ff -1px -1px 2px;
+    font-size: 20px;
+}
+
+
+
+  
 #animacao_placar{
     text-align: center;
     display: none;
@@ -17,18 +30,20 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100lh;
+    width: 100%;
     background-color: green;
     color: white;
     font-size: 100px;
     font-family: sans-serif;
 }
 
+
 #placar{
     font-size: 40px;
 }
 
 .animacao_perdeu{
+    width: 100%;
     display: block;
     animation-name: cairTexto;
     animation-iteration-count: 1;
@@ -37,6 +52,7 @@
     animation-duration: 7s;
 }
 .animacao_ganhou{
+    width: 100%;
     display: block;
     animation-name: pularTexto;
     animation-iteration-count: 10;
@@ -45,13 +61,39 @@
     animation-duration: 0.5s;
 }
 
+input[type="checkbox"]{
+    all: unset;
+    border: 1px solid rgb(26, 35, 161);
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+input[type="checkbox"]:checked{
+    border: 4px solid rgb(26, 35, 161);
+    background-color: #ffdbc7;
+    box-shadow: 3px 3px 4px rgba(255, 255, 255, 0.551);
+}
+
+input[type="text"]{
+    background-color: #F39563;
+    border: none;
+    border: 1px solid black;
+    border-radius: 4px;
+    margin: 4px;
+}
+input[type="text"]:focus-visible{
+    background-color: #ffdbc7;
+}
+
+
+
 #criarSala{
-    padding: 10px 20px 10px 20px;
-
-
+    padding: 15px 30px 15px 30px;
     margin: 30px;
-
     border-radius: 20px;
+    font-size: 40px;
 
     /* box-shadow: 0px 0px 0px rgba(10, 10, 10, 0.5); */
 }
@@ -62,13 +104,17 @@
 
 button{
     transition: 0.5s;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     font-weight: bolder;
     color: #feffff; 
     border: none;
     background: linear-gradient(135deg, #8f17ff 60%, #1379ff);
     border-radius: 5px;
-    padding: 5px;
+    padding: 5px 10px 5px 10px;
+    margin: 5px;
 }
 
 button:hover{
@@ -85,6 +131,9 @@ button:hover{
     justify-content: center;
     align-items: center;
     background: linear-gradient(135deg, #F39563, #F25258);
+    background-image: url("sprites/fundo.jpg");
+    background-size: 100vw 100vh;
+
     z-index: -100;
 }
 
